--- a/index.htm
+++ b/index.htm
@@ -96,8 +96,8 @@
 
             <div class="col-md-6 seg2">
 
-                <h1>Heading toward a new goal. We are moving to our target</h1>
-                <p>Gets updated at the most end and you will definately have success at last . But the most important is to be be consistent and calm</p>
+                <h1>Heading toward a new era of Digitalization and AI</h1>
+                <p>Gets ready to compete and you will definately have success. But the most important is to be be consistent and keep updated.</p>
                 <button><i class="fa fa-share-square-o"></i>  Enquiry</button>
 
             </div>
