--- a/index.htm
+++ b/index.htm
@@ -119,17 +119,17 @@
 
                 <div class="col-md-3 block">
                     <h1>1</h1>
-                    <p>Getting Clients has now been much easier</p>
+                    <p>Just make your appearnace online</p>
                     <i class="fa fa-arrow-right",aria-hidden="true"></i>
                 </div>
                 <div class="col-md-3 block">
                     <h1>2</h1>  
-                    <p>Set Your Goals</p>
+                    <p>Optimize your product and services</p>
                     <i class="fa fa-arrow-right",aria-hidden="true"></i>
                 </div>
                 <div class="col-md-3 block">
                     <h1>3</h1>  
-                    <p>Be Successful !</p>
+                    <p>Get useful insights of data through analytics and customise it.</p>
                     <i class="fa fa-arrow-right",aria-hidden="true"></i>
                 </div>
 
@@ -250,11 +250,11 @@
 
                 <p></p>
                 <div class="col-md-12 address_block">
-                    <h5><i class="fa fa-home" aria-hidden="true"></i>Address: Sector 27, Atal Nagar</h5>
-                    <h5><i class="fa fa-rss" aria-hidden="true"></i>City: Raipur (C.G)</h5>
+                    <h5><i class="fa fa-home" aria-hidden="true"></i>Address: Chhota Telpa, Gandhi Chowk</h5>
+                    <h5><i class="fa fa-rss" aria-hidden="true"></i>City: Chhapra (BR)</h5>
                     <h5><i class="fa fa-mobile" aria-hidden="true"></i>    Contact: +91-8804747678</h5>
                     <h5><i class="fa fa-arrow-right" aria-hidden="true"></i>E-mail:ccyberovate@gmail.com</h5>
-                    <h5><i class="fa fa-home" aria-hidden="true"></i>Regional City: Saran(Bihar)</h5>
+                    <h5><i class="fa fa-home" aria-hidden="true"></i>Regional District Center: Saran(Bihar)</h5>
 
                 </div>
 
