--- a/index.htm
+++ b/index.htm
@@ -104,8 +104,9 @@
             <div class="col-md-6 seg2_1">
                 
                 <div class="col-md-5 sub_seg2_1">
-                    <p>Indistry Choice</p>
+                    <p>Industry Choice</p>
                     <i class="fa fa-heart", aria-hidden="true"></i>
+                     <i class="fa fa-globe", aria-hidden="true"></i>
                 </div>
                 
             </div>
